fix: icon alignment not working in Chromium

--- a/src/style.css
+++ b/src/style.css
@@ -280,9 +280,7 @@ input.invalid {
 
 *[class^="icon"] {
     display: inline-block;
-    alignment-baseline: middle;
-    baseline-shift: 0.09em;
-    baseline-source: auto;
+    vertical-align: -0.15em;
     height: 1em;
     filter: drop-shadow(0.06em 0 0 currentColor)
         drop-shadow(-0.06em 0 0 currentColor)
